<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atorch.shortestpaths.SolvePuzzle" >

    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin_half"
    	android:paddingTop="@dimen/activity_vertical_margin_half"
        android:id="@+id/puzzle_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin_half"
    	android:paddingTop="@dimen/activity_vertical_margin_half"
        android:id="@+id/path_length_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/countries_visited"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	tools:context="atorch.shortestpaths.SolvePuzzle" >
    	<TextView
    	    android:paddingBottom="@dimen/activity_vertical_margin_quarter"
    		android:paddingTop="@dimen/activity_vertical_margin_half"
        	android:id="@+id/countries_visited_root"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    	<ImageView android:contentDescription="@string/arrow_description"
        	android:id="@+id/countries_visited_arrow"
    		android:layout_height="wrap_content"
    		android:layout_width="match_parent" />
    </LinearLayout>
    
    <AutoCompleteTextView
        android:hint="@string/where_next"
    	android:id="@+id/autocomplete_country"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
    
    <Button
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin_double"
        android:gravity="center_horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    style="?android:attr/borderlessButtonStyle"
	    android:id="@+id/button_give_up"
	    android:text="@string/button_give_up" />
    
    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin_half"
    	android:paddingTop="@dimen/activity_vertical_margin_half"
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
	    android:id="@+id/buttons"
        tools:context="atorch.shortestpaths.SolvePuzzle" >

        <Button
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="newPuzzle"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_new_puzzle" />

        <Button
            android:paddingBottom="@dimen/activity_vertical_margin"
        	android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
	    	android:layout_height="wrap_content"
	    	android:layout_width="match_parent"
	    	android:onClick="backToMain"
	    	style="?android:attr/borderlessButtonStyle"
	    	android:text="@string/button_back_to_main" />
    </LinearLayout>
    
</LinearLayout>
</ScrollView>
